Commiting configuration prior to .ioc rebuild.
Signed-off-by: Anthony Clay <anthony.clay@zarthcode.com>

--- a/Configuration/Configuration.ioc
+++ b/Configuration/Configuration.ioc
@@ -1,32 +1,32 @@
 #MicroXplorer Configuration settings - do not modify
-#Mon Sep 29 21:51:33 CDT 2014
+#Fri Oct 10 14:15:13 CDT 2014
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.IPParameters=Channel-0\#ChannelRegularConversion,master,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
 ADC1.master=1
 Dma.Request0=SPI3_RX
 Dma.Request1=SPI3_TX
-Dma.Request10=SPI6_TX
+Dma.Request10=SPI1_RX
 Dma.Request2=SPI2_RX
 Dma.Request3=SPI2_TX
 Dma.Request4=SPI4_RX
 Dma.Request5=SPI4_TX
-Dma.Request6=SPI1_RX
-Dma.Request7=SPI5_TX
-Dma.Request8=SPI5_RX
-Dma.Request9=SPI6_RX
+Dma.Request6=SPI5_TX
+Dma.Request7=SPI5_RX
+Dma.Request8=SPI6_RX
+Dma.Request9=SPI6_TX
 Dma.RequestsNb=11
-Dma.SPI1_RX.6.Channel=DMA_CHANNEL_3
-Dma.SPI1_RX.6.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.6.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_RX.6.Instance=DMA2_Stream2
-Dma.SPI1_RX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_RX.6.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.6.Mode=DMA_NORMAL
-Dma.SPI1_RX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_RX.6.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.6.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_RX.6.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI1_RX.10.Channel=DMA_CHANNEL_3
+Dma.SPI1_RX.10.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.10.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_RX.10.Instance=DMA2_Stream2
+Dma.SPI1_RX.10.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.10.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.10.Mode=DMA_NORMAL
+Dma.SPI1_RX.10.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.10.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.10.Priority=DMA_PRIORITY_HIGH
+Dma.SPI1_RX.10.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI2_RX.2.Channel=DMA_CHANNEL_0
 Dma.SPI2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI2_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -93,50 +93,50 @@ Dma.SPI4_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI4_TX.5.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI4_TX.5.Priority=DMA_PRIORITY_HIGH
 Dma.SPI4_TX.5.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI5_RX.8.Channel=DMA_CHANNEL_2
-Dma.SPI5_RX.8.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI5_RX.8.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI5_RX.8.Instance=DMA2_Stream3
-Dma.SPI5_RX.8.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI5_RX.8.MemInc=DMA_MINC_ENABLE
-Dma.SPI5_RX.8.Mode=DMA_NORMAL
-Dma.SPI5_RX.8.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI5_RX.8.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI5_RX.8.Priority=DMA_PRIORITY_HIGH
-Dma.SPI5_RX.8.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI5_TX.7.Channel=DMA_CHANNEL_2
-Dma.SPI5_TX.7.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI5_TX.7.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI5_TX.7.Instance=DMA2_Stream4
-Dma.SPI5_TX.7.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI5_TX.7.MemInc=DMA_MINC_ENABLE
-Dma.SPI5_TX.7.Mode=DMA_NORMAL
-Dma.SPI5_TX.7.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI5_TX.7.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI5_TX.7.Priority=DMA_PRIORITY_MEDIUM
-Dma.SPI5_TX.7.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI6_RX.9.Channel=DMA_CHANNEL_1
-Dma.SPI6_RX.9.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI6_RX.9.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI6_RX.9.Instance=DMA2_Stream6
-Dma.SPI6_RX.9.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI6_RX.9.MemInc=DMA_MINC_ENABLE
-Dma.SPI6_RX.9.Mode=DMA_NORMAL
-Dma.SPI6_RX.9.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI6_RX.9.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI6_RX.9.Priority=DMA_PRIORITY_HIGH
-Dma.SPI6_RX.9.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI6_TX.10.Channel=DMA_CHANNEL_1
-Dma.SPI6_TX.10.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI6_TX.10.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI6_TX.10.Instance=DMA2_Stream5
-Dma.SPI6_TX.10.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI6_TX.10.MemInc=DMA_MINC_ENABLE
-Dma.SPI6_TX.10.Mode=DMA_NORMAL
-Dma.SPI6_TX.10.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI6_TX.10.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI6_TX.10.Priority=DMA_PRIORITY_MEDIUM
-Dma.SPI6_TX.10.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI5_RX.7.Channel=DMA_CHANNEL_2
+Dma.SPI5_RX.7.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI5_RX.7.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI5_RX.7.Instance=DMA2_Stream3
+Dma.SPI5_RX.7.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI5_RX.7.MemInc=DMA_MINC_ENABLE
+Dma.SPI5_RX.7.Mode=DMA_NORMAL
+Dma.SPI5_RX.7.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI5_RX.7.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI5_RX.7.Priority=DMA_PRIORITY_HIGH
+Dma.SPI5_RX.7.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI5_TX.6.Channel=DMA_CHANNEL_2
+Dma.SPI5_TX.6.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI5_TX.6.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI5_TX.6.Instance=DMA2_Stream4
+Dma.SPI5_TX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI5_TX.6.MemInc=DMA_MINC_ENABLE
+Dma.SPI5_TX.6.Mode=DMA_NORMAL
+Dma.SPI5_TX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI5_TX.6.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI5_TX.6.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI5_TX.6.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI6_RX.8.Channel=DMA_CHANNEL_1
+Dma.SPI6_RX.8.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI6_RX.8.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI6_RX.8.Instance=DMA2_Stream6
+Dma.SPI6_RX.8.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI6_RX.8.MemInc=DMA_MINC_ENABLE
+Dma.SPI6_RX.8.Mode=DMA_NORMAL
+Dma.SPI6_RX.8.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI6_RX.8.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI6_RX.8.Priority=DMA_PRIORITY_HIGH
+Dma.SPI6_RX.8.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI6_TX.9.Channel=DMA_CHANNEL_1
+Dma.SPI6_TX.9.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI6_TX.9.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI6_TX.9.Instance=DMA2_Stream5
+Dma.SPI6_TX.9.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI6_TX.9.MemInc=DMA_MINC_ENABLE
+Dma.SPI6_TX.9.Mode=DMA_NORMAL
+Dma.SPI6_TX.9.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI6_TX.9.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI6_TX.9.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI6_TX.9.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=4
 KeepUserPlacement=false
 Mcu.Family=STM32F4
@@ -363,12 +363,8 @@ PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
 PB3.Mode=JTAG(4-pin)
 PB3.Signal=SYS_JTDO-SWO
-PB4.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
-PB4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB4.GPIO_PuPd=GPIO_PULLUP
-PB4.GPIO_Speed=GPIO_SPEED_LOW
 PB4.Locked=true
-PB4.Signal=GPIO_Output
+PB4.Signal=GPXTI4
 PB5.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
 PB5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB5.GPIO_PuPd=GPIO_PULLUP
@@ -847,6 +843,8 @@ RCC.VcooutputI2S=96000000
 RCC.VcooutputI2SQ=96000000
 SH.ADCx_IN10.0=ADC1_IN10,IN10
 SH.ADCx_IN10.ConfNb=1
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
@@ -997,7 +995,10 @@ TIM8.Prescaler=1000
 TIM8.Pulse-PWM\ Generation1\ CH1=500
 TIM8.Pulse-PWM\ Generation2\ CH2=500
 TIM8.Pulse-PWM\ Generation3\ CH3=500
-USART3.IPParameters=VirtualMode-Synchronous
+USART3.BaudRate-Synchronous=5250000
+USART3.CLKLastBit-Synchronous=USART_LASTBIT_ENABLE
+USART3.CLKPhase-Synchronous=USART_PHASE_1EDGE
+USART3.IPParameters=VirtualMode-Synchronous,CLKPhase-Synchronous,CLKLastBit-Synchronous,BaudRate-Synchronous
 USART3.VirtualMode-Synchronous=VM_SYNC
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
