--- a/Configuration/Configuration.ioc
+++ b/Configuration/Configuration.ioc
@@ -1,32 +1,33 @@
 #MicroXplorer Configuration settings - do not modify
-#Fri Oct 10 14:15:13 CDT 2014
+#Mon Oct 20 16:24:59 CDT 2014
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.IPParameters=Channel-0\#ChannelRegularConversion,master,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
 ADC1.master=1
 Dma.Request0=SPI3_RX
 Dma.Request1=SPI3_TX
-Dma.Request10=SPI1_RX
+Dma.Request10=USART3_RX
+Dma.Request11=USART3_TX
 Dma.Request2=SPI2_RX
-Dma.Request3=SPI2_TX
-Dma.Request4=SPI4_RX
-Dma.Request5=SPI4_TX
-Dma.Request6=SPI5_TX
-Dma.Request7=SPI5_RX
-Dma.Request8=SPI6_RX
-Dma.Request9=SPI6_TX
-Dma.RequestsNb=11
-Dma.SPI1_RX.10.Channel=DMA_CHANNEL_3
-Dma.SPI1_RX.10.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.10.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_RX.10.Instance=DMA2_Stream2
-Dma.SPI1_RX.10.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_RX.10.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.10.Mode=DMA_NORMAL
-Dma.SPI1_RX.10.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_RX.10.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.10.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_RX.10.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request3=SPI4_RX
+Dma.Request4=SPI4_TX
+Dma.Request5=SPI5_TX
+Dma.Request6=SPI5_RX
+Dma.Request7=SPI6_RX
+Dma.Request8=SPI6_TX
+Dma.Request9=SPI1_RX
+Dma.RequestsNb=12
+Dma.SPI1_RX.9.Channel=DMA_CHANNEL_3
+Dma.SPI1_RX.9.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.9.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_RX.9.Instance=DMA2_Stream2
+Dma.SPI1_RX.9.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.9.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.9.Mode=DMA_NORMAL
+Dma.SPI1_RX.9.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.9.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.9.Priority=DMA_PRIORITY_HIGH
+Dma.SPI1_RX.9.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI2_RX.2.Channel=DMA_CHANNEL_0
 Dma.SPI2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI2_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -38,17 +39,6 @@ Dma.SPI2_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI2_RX.2.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI2_RX.2.Priority=DMA_PRIORITY_MEDIUM
 Dma.SPI2_RX.2.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI2_TX.3.Channel=DMA_CHANNEL_0
-Dma.SPI2_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI2_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI2_TX.3.Instance=DMA1_Stream4
-Dma.SPI2_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI2_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_TX.3.Mode=DMA_NORMAL
-Dma.SPI2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI2_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_TX.3.Priority=DMA_PRIORITY_HIGH
-Dma.SPI2_TX.3.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI3_RX.0.Channel=DMA_CHANNEL_0
 Dma.SPI3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -71,72 +61,94 @@ Dma.SPI3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI3_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI3_TX.1.Priority=DMA_PRIORITY_HIGH
 Dma.SPI3_TX.1.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI4_RX.4.Channel=DMA_CHANNEL_4
-Dma.SPI4_RX.4.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI4_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI4_RX.4.Instance=DMA2_Stream0
-Dma.SPI4_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI4_RX.4.MemInc=DMA_MINC_ENABLE
-Dma.SPI4_RX.4.Mode=DMA_NORMAL
-Dma.SPI4_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI4_RX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI4_RX.4.Priority=DMA_PRIORITY_MEDIUM
-Dma.SPI4_RX.4.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI4_TX.5.Channel=DMA_CHANNEL_4
-Dma.SPI4_TX.5.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI4_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI4_TX.5.Instance=DMA2_Stream1
-Dma.SPI4_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI4_TX.5.MemInc=DMA_MINC_ENABLE
-Dma.SPI4_TX.5.Mode=DMA_NORMAL
-Dma.SPI4_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI4_TX.5.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI4_TX.5.Priority=DMA_PRIORITY_HIGH
-Dma.SPI4_TX.5.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI5_RX.7.Channel=DMA_CHANNEL_2
-Dma.SPI5_RX.7.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI5_RX.7.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI5_RX.7.Instance=DMA2_Stream3
-Dma.SPI5_RX.7.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI5_RX.7.MemInc=DMA_MINC_ENABLE
-Dma.SPI5_RX.7.Mode=DMA_NORMAL
-Dma.SPI5_RX.7.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI5_RX.7.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI5_RX.7.Priority=DMA_PRIORITY_HIGH
-Dma.SPI5_RX.7.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI5_TX.6.Channel=DMA_CHANNEL_2
-Dma.SPI5_TX.6.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI5_TX.6.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI5_TX.6.Instance=DMA2_Stream4
-Dma.SPI5_TX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI5_TX.6.MemInc=DMA_MINC_ENABLE
-Dma.SPI5_TX.6.Mode=DMA_NORMAL
-Dma.SPI5_TX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI5_TX.6.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI5_TX.6.Priority=DMA_PRIORITY_MEDIUM
-Dma.SPI5_TX.6.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI6_RX.8.Channel=DMA_CHANNEL_1
-Dma.SPI6_RX.8.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI6_RX.8.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI6_RX.8.Instance=DMA2_Stream6
-Dma.SPI6_RX.8.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI6_RX.8.MemInc=DMA_MINC_ENABLE
-Dma.SPI6_RX.8.Mode=DMA_NORMAL
-Dma.SPI6_RX.8.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI6_RX.8.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI6_RX.8.Priority=DMA_PRIORITY_HIGH
-Dma.SPI6_RX.8.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI6_TX.9.Channel=DMA_CHANNEL_1
-Dma.SPI6_TX.9.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI6_TX.9.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI6_TX.9.Instance=DMA2_Stream5
-Dma.SPI6_TX.9.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI6_TX.9.MemInc=DMA_MINC_ENABLE
-Dma.SPI6_TX.9.Mode=DMA_NORMAL
-Dma.SPI6_TX.9.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI6_TX.9.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI6_TX.9.Priority=DMA_PRIORITY_MEDIUM
-Dma.SPI6_TX.9.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI4_RX.3.Channel=DMA_CHANNEL_4
+Dma.SPI4_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI4_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI4_RX.3.Instance=DMA2_Stream0
+Dma.SPI4_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI4_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI4_RX.3.Mode=DMA_NORMAL
+Dma.SPI4_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI4_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI4_RX.3.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI4_RX.3.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI4_TX.4.Channel=DMA_CHANNEL_4
+Dma.SPI4_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI4_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI4_TX.4.Instance=DMA2_Stream1
+Dma.SPI4_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI4_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.SPI4_TX.4.Mode=DMA_NORMAL
+Dma.SPI4_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI4_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI4_TX.4.Priority=DMA_PRIORITY_HIGH
+Dma.SPI4_TX.4.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI5_RX.6.Channel=DMA_CHANNEL_2
+Dma.SPI5_RX.6.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI5_RX.6.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI5_RX.6.Instance=DMA2_Stream3
+Dma.SPI5_RX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI5_RX.6.MemInc=DMA_MINC_ENABLE
+Dma.SPI5_RX.6.Mode=DMA_NORMAL
+Dma.SPI5_RX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI5_RX.6.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI5_RX.6.Priority=DMA_PRIORITY_HIGH
+Dma.SPI5_RX.6.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI5_TX.5.Channel=DMA_CHANNEL_2
+Dma.SPI5_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI5_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI5_TX.5.Instance=DMA2_Stream4
+Dma.SPI5_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI5_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.SPI5_TX.5.Mode=DMA_NORMAL
+Dma.SPI5_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI5_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI5_TX.5.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI5_TX.5.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI6_RX.7.Channel=DMA_CHANNEL_1
+Dma.SPI6_RX.7.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI6_RX.7.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI6_RX.7.Instance=DMA2_Stream6
+Dma.SPI6_RX.7.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI6_RX.7.MemInc=DMA_MINC_ENABLE
+Dma.SPI6_RX.7.Mode=DMA_NORMAL
+Dma.SPI6_RX.7.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI6_RX.7.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI6_RX.7.Priority=DMA_PRIORITY_HIGH
+Dma.SPI6_RX.7.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI6_TX.8.Channel=DMA_CHANNEL_1
+Dma.SPI6_TX.8.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI6_TX.8.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI6_TX.8.Instance=DMA2_Stream5
+Dma.SPI6_TX.8.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI6_TX.8.MemInc=DMA_MINC_ENABLE
+Dma.SPI6_TX.8.Mode=DMA_NORMAL
+Dma.SPI6_TX.8.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI6_TX.8.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI6_TX.8.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI6_TX.8.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART3_RX.10.Channel=DMA_CHANNEL_4
+Dma.USART3_RX.10.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART3_RX.10.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_RX.10.Instance=DMA1_Stream1
+Dma.USART3_RX.10.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_RX.10.MemInc=DMA_MINC_ENABLE
+Dma.USART3_RX.10.Mode=DMA_NORMAL
+Dma.USART3_RX.10.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_RX.10.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_RX.10.Priority=DMA_PRIORITY_MEDIUM
+Dma.USART3_RX.10.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART3_TX.11.Channel=DMA_CHANNEL_7
+Dma.USART3_TX.11.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.11.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_TX.11.Instance=DMA1_Stream4
+Dma.USART3_TX.11.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.11.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.11.Mode=DMA_NORMAL
+Dma.USART3_TX.11.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.11.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.11.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.USART3_TX.11.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=4
 KeepUserPlacement=false
 Mcu.Family=STM32F4
@@ -273,19 +285,7 @@ Mcu.Pin98=PE1
 Mcu.Pin99=PI4
 Mcu.PinsNb=108
 Mcu.UserName=STM32F427IGTx
-NVIC.DMA1_Stream0_IRQn=true\:1\:4
 NVIC.DMA1_Stream3_IRQn=true\:1\:4
-NVIC.DMA1_Stream4_IRQn=true\:1\:3
-NVIC.DMA1_Stream5_IRQn=true\:1\:4
-NVIC.DMA1_Stream6_IRQn=true\:1\:3
-NVIC.DMA1_Stream7_IRQn=true\:1\:3
-NVIC.DMA2_Stream0_IRQn=true\:1\:4
-NVIC.DMA2_Stream1_IRQn=true\:1\:3
-NVIC.DMA2_Stream2_IRQn=true\:1\:4
-NVIC.DMA2_Stream3_IRQn=true\:1\:4
-NVIC.DMA2_Stream4_IRQn=true\:1\:3
-NVIC.DMA2_Stream5_IRQn=true\:1\:3
-NVIC.DMA2_Stream6_IRQn=true\:1\:4
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_1
 NVIC.SPI1_IRQn=true\:1\:4
 NVIC.SysTick_IRQn=true\:0\:0
@@ -829,7 +829,7 @@ RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.FamilyName=M
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=,FamilyName,APB2CLKDivider,LSE_VALUE,SYSCLKSource,APB1CLKDivider,VCOSAIOutputFreq_ValueR,PLLN,VcooutputI2SQ,HSE_VALUE,VCOSAIOutputFreq_ValueQ,HSI_VALUE,PLLQ,VcooutputI2S,LSI_VALUE,RCC_MCODiv1,RCC_MCO1Source
+RCC.IPParameters=,FamilyName,APB2CLKDivider,LSE_VALUE,SYSCLKSource,APB1CLKDivider,VCOSAIOutputFreq_ValueR,PLLN,VcooutputI2SQ,VCOSAIOutputFreq_ValueQ,HSE_VALUE,HSI_VALUE,PLLQ,VcooutputI2S,LSI_VALUE,RCC_MCO1Source,RCC_MCODiv1
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.PLLN=336
@@ -883,37 +883,37 @@ SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_32
 SPI1.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI1.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI1.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
-SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI2.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI2.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI2.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI2.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
-SPI2.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI2.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI2.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI3.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI3.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI3.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI3.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
-SPI3.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI3.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI3.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI4.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_32
 SPI4.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI4.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI4.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
-SPI4.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI4.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI4.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI5.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_32
 SPI5.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI5.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI5.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
-SPI5.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI5.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI5.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI6.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_32
 SPI6.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI6.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI6.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
-SPI6.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI6.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI6.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 TIM1.AutomaticOutput=TIM_AUTOMATICOUTPUT_DISABLE
 TIM1.BreakPolarity=TIM_BREAKPOLARITY_LOW
@@ -922,7 +922,7 @@ TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM1.IPParameters=Pulse-PWM Generation1 CH1,OffStateIDLEMode,OCIdleState_1-PWM Generation1 CH1,TIM_MasterSlaveMode,Period,Prescaler,OffStateRunMode,Channel-PWM Generation4 CH4,AutomaticOutput,BreakPolarity,BreakState,OCPolarity_4-PWM Generation4 CH4,TIM_MasterOutputTrigger,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation4 CH4,Pulse-PWM Generation3 CH3,ClockDivision,Channel-PWM Generation2 CH2,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,OCIdleState_4-PWM Generation4 CH4,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
+TIM1.IPParameters=Pulse-PWM Generation1 CH1,OffStateIDLEMode,OCIdleState_1-PWM Generation1 CH1,TIM_MasterSlaveMode,Period,Prescaler,OffStateRunMode,Channel-PWM Generation4 CH4,BreakPolarity,AutomaticOutput,OCPolarity_4-PWM Generation4 CH4,BreakState,TIM_MasterOutputTrigger,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation4 CH4,Pulse-PWM Generation3 CH3,ClockDivision,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,OCIdleState_4-PWM Generation4 CH4,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
 TIM1.OCIdleState_1-PWM\ Generation1\ CH1=TIM_OCIDLESTATE_SET
 TIM1.OCIdleState_2-PWM\ Generation2\ CH2=TIM_OCIDLESTATE_SET
 TIM1.OCIdleState_3-PWM\ Generation3\ CH3=TIM_OCIDLESTATE_SET
@@ -983,7 +983,7 @@ TIM5.Pulse-PWM\ Generation3\ CH3=500
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM8.IPParameters=Pulse-PWM Generation1 CH1,OCIdleState_1-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
+TIM8.IPParameters=Pulse-PWM Generation1 CH1,OCIdleState_1-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,Channel-PWM Generation2 CH2,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
 TIM8.OCIdleState_1-PWM\ Generation1\ CH1=TIM_OCIDLESTATE_SET
 TIM8.OCIdleState_2-PWM\ Generation2\ CH2=TIM_OCIDLESTATE_SET
 TIM8.OCIdleState_3-PWM\ Generation3\ CH3=TIM_OCIDLESTATE_SET
