Configuration.ioc rebuild complete.  (It appears this is the best state yet.  No hand-edits appear to be necessary.)

--- a/Configuration/Configuration.ioc
+++ b/Configuration/Configuration.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-#Mon Oct 20 16:24:59 CDT 2014
+#Mon Oct 20 17:58:42 CDT 2014
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.IPParameters=Channel-0\#ChannelRegularConversion,master,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
@@ -8,37 +8,37 @@ Dma.Request0=SPI3_RX
 Dma.Request1=SPI3_TX
 Dma.Request10=USART3_RX
 Dma.Request11=USART3_TX
-Dma.Request2=SPI2_RX
-Dma.Request3=SPI4_RX
-Dma.Request4=SPI4_TX
-Dma.Request5=SPI5_TX
-Dma.Request6=SPI5_RX
-Dma.Request7=SPI6_RX
-Dma.Request8=SPI6_TX
-Dma.Request9=SPI1_RX
+Dma.Request2=SPI4_RX
+Dma.Request3=SPI4_TX
+Dma.Request4=SPI5_TX
+Dma.Request5=SPI5_RX
+Dma.Request6=SPI6_RX
+Dma.Request7=SPI6_TX
+Dma.Request8=SPI1_RX
+Dma.Request9=SPI2_RX
 Dma.RequestsNb=12
-Dma.SPI1_RX.9.Channel=DMA_CHANNEL_3
-Dma.SPI1_RX.9.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.9.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_RX.9.Instance=DMA2_Stream2
-Dma.SPI1_RX.9.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_RX.9.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.9.Mode=DMA_NORMAL
-Dma.SPI1_RX.9.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_RX.9.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.9.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_RX.9.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI2_RX.2.Channel=DMA_CHANNEL_0
-Dma.SPI2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI2_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI2_RX.2.Instance=DMA1_Stream3
-Dma.SPI2_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI2_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_RX.2.Mode=DMA_NORMAL
-Dma.SPI2_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI2_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_RX.2.Priority=DMA_PRIORITY_MEDIUM
-Dma.SPI2_RX.2.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI1_RX.8.Channel=DMA_CHANNEL_3
+Dma.SPI1_RX.8.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.8.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_RX.8.Instance=DMA2_Stream2
+Dma.SPI1_RX.8.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.8.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.8.Mode=DMA_NORMAL
+Dma.SPI1_RX.8.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.8.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.8.Priority=DMA_PRIORITY_HIGH
+Dma.SPI1_RX.8.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI2_RX.9.Channel=DMA_CHANNEL_0
+Dma.SPI2_RX.9.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.9.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_RX.9.Instance=DMA1_Stream3
+Dma.SPI2_RX.9.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_RX.9.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.9.Mode=DMA_NORMAL
+Dma.SPI2_RX.9.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_RX.9.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.9.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI2_RX.9.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI3_RX.0.Channel=DMA_CHANNEL_0
 Dma.SPI3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -61,72 +61,72 @@ Dma.SPI3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI3_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI3_TX.1.Priority=DMA_PRIORITY_HIGH
 Dma.SPI3_TX.1.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI4_RX.3.Channel=DMA_CHANNEL_4
-Dma.SPI4_RX.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI4_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI4_RX.3.Instance=DMA2_Stream0
-Dma.SPI4_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI4_RX.3.MemInc=DMA_MINC_ENABLE
-Dma.SPI4_RX.3.Mode=DMA_NORMAL
-Dma.SPI4_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI4_RX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI4_RX.3.Priority=DMA_PRIORITY_MEDIUM
-Dma.SPI4_RX.3.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI4_TX.4.Channel=DMA_CHANNEL_4
-Dma.SPI4_TX.4.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI4_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI4_TX.4.Instance=DMA2_Stream1
-Dma.SPI4_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI4_TX.4.MemInc=DMA_MINC_ENABLE
-Dma.SPI4_TX.4.Mode=DMA_NORMAL
-Dma.SPI4_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI4_TX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI4_TX.4.Priority=DMA_PRIORITY_HIGH
-Dma.SPI4_TX.4.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI5_RX.6.Channel=DMA_CHANNEL_2
-Dma.SPI5_RX.6.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI5_RX.6.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI5_RX.6.Instance=DMA2_Stream3
-Dma.SPI5_RX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI5_RX.6.MemInc=DMA_MINC_ENABLE
-Dma.SPI5_RX.6.Mode=DMA_NORMAL
-Dma.SPI5_RX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI5_RX.6.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI5_RX.6.Priority=DMA_PRIORITY_HIGH
-Dma.SPI5_RX.6.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI5_TX.5.Channel=DMA_CHANNEL_2
-Dma.SPI5_TX.5.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI5_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI5_TX.5.Instance=DMA2_Stream4
-Dma.SPI5_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI5_TX.5.MemInc=DMA_MINC_ENABLE
-Dma.SPI5_TX.5.Mode=DMA_NORMAL
-Dma.SPI5_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI5_TX.5.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI5_TX.5.Priority=DMA_PRIORITY_MEDIUM
-Dma.SPI5_TX.5.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI6_RX.7.Channel=DMA_CHANNEL_1
-Dma.SPI6_RX.7.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI6_RX.7.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI6_RX.7.Instance=DMA2_Stream6
-Dma.SPI6_RX.7.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI6_RX.7.MemInc=DMA_MINC_ENABLE
-Dma.SPI6_RX.7.Mode=DMA_NORMAL
-Dma.SPI6_RX.7.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI6_RX.7.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI6_RX.7.Priority=DMA_PRIORITY_HIGH
-Dma.SPI6_RX.7.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI6_TX.8.Channel=DMA_CHANNEL_1
-Dma.SPI6_TX.8.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI6_TX.8.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI6_TX.8.Instance=DMA2_Stream5
-Dma.SPI6_TX.8.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI6_TX.8.MemInc=DMA_MINC_ENABLE
-Dma.SPI6_TX.8.Mode=DMA_NORMAL
-Dma.SPI6_TX.8.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI6_TX.8.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI6_TX.8.Priority=DMA_PRIORITY_MEDIUM
-Dma.SPI6_TX.8.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI4_RX.2.Channel=DMA_CHANNEL_4
+Dma.SPI4_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI4_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI4_RX.2.Instance=DMA2_Stream0
+Dma.SPI4_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI4_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI4_RX.2.Mode=DMA_NORMAL
+Dma.SPI4_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI4_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI4_RX.2.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI4_RX.2.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI4_TX.3.Channel=DMA_CHANNEL_4
+Dma.SPI4_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI4_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI4_TX.3.Instance=DMA2_Stream1
+Dma.SPI4_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI4_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI4_TX.3.Mode=DMA_NORMAL
+Dma.SPI4_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI4_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI4_TX.3.Priority=DMA_PRIORITY_HIGH
+Dma.SPI4_TX.3.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI5_RX.5.Channel=DMA_CHANNEL_2
+Dma.SPI5_RX.5.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI5_RX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI5_RX.5.Instance=DMA2_Stream3
+Dma.SPI5_RX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI5_RX.5.MemInc=DMA_MINC_ENABLE
+Dma.SPI5_RX.5.Mode=DMA_NORMAL
+Dma.SPI5_RX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI5_RX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI5_RX.5.Priority=DMA_PRIORITY_HIGH
+Dma.SPI5_RX.5.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI5_TX.4.Channel=DMA_CHANNEL_2
+Dma.SPI5_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI5_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI5_TX.4.Instance=DMA2_Stream4
+Dma.SPI5_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI5_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.SPI5_TX.4.Mode=DMA_NORMAL
+Dma.SPI5_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI5_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI5_TX.4.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI5_TX.4.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI6_RX.6.Channel=DMA_CHANNEL_1
+Dma.SPI6_RX.6.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI6_RX.6.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI6_RX.6.Instance=DMA2_Stream6
+Dma.SPI6_RX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI6_RX.6.MemInc=DMA_MINC_ENABLE
+Dma.SPI6_RX.6.Mode=DMA_NORMAL
+Dma.SPI6_RX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI6_RX.6.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI6_RX.6.Priority=DMA_PRIORITY_HIGH
+Dma.SPI6_RX.6.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI6_TX.7.Channel=DMA_CHANNEL_1
+Dma.SPI6_TX.7.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI6_TX.7.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI6_TX.7.Instance=DMA2_Stream5
+Dma.SPI6_TX.7.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI6_TX.7.MemInc=DMA_MINC_ENABLE
+Dma.SPI6_TX.7.Mode=DMA_NORMAL
+Dma.SPI6_TX.7.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI6_TX.7.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI6_TX.7.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI6_TX.7.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART3_RX.10.Channel=DMA_CHANNEL_4
 Dma.USART3_RX.10.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART3_RX.10.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -285,9 +285,21 @@ Mcu.Pin98=PE1
 Mcu.Pin99=PI4
 Mcu.PinsNb=108
 Mcu.UserName=STM32F427IGTx
-NVIC.DMA1_Stream3_IRQn=true\:1\:4
+NVIC.DMA1_Stream0_IRQn=true\:1\:1
+NVIC.DMA1_Stream1_IRQn=true\:0\:2
+NVIC.DMA1_Stream3_IRQn=true\:1\:1
+NVIC.DMA1_Stream4_IRQn=true\:0\:1
+NVIC.DMA1_Stream7_IRQn=true\:1\:0
+NVIC.DMA2_Stream0_IRQn=true\:1\:5
+NVIC.DMA2_Stream1_IRQn=true\:1\:3
+NVIC.DMA2_Stream2_IRQn=true\:1\:4
+NVIC.DMA2_Stream3_IRQn=true\:1\:5
+NVIC.DMA2_Stream4_IRQn=true\:1\:3
+NVIC.DMA2_Stream5_IRQn=true\:1\:3
+NVIC.DMA2_Stream6_IRQn=true\:1\:5
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_1
-NVIC.SPI1_IRQn=true\:1\:4
+NVIC.SPI1_IRQn=true\:0\:7
+NVIC.SPI2_IRQn=true\:0\:6
 NVIC.SysTick_IRQn=true\:0\:0
 PA0/WKUP.Mode=SYS-WakeUp
 PA0/WKUP.Signal=SYS_WKUP
@@ -363,6 +375,9 @@ PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
 PB3.Mode=JTAG(4-pin)
 PB3.Signal=SYS_JTDO-SWO
+PB4.GPIOParameters=GPIO_ModeDefaultEXTI,GPIO_PuPd
+PB4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PB4.GPIO_PuPd=GPIO_NOPULL
 PB4.Locked=true
 PB4.Signal=GPXTI4
 PB5.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
