--- a/Configuration/Configuration.ioc
+++ b/Configuration/Configuration.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-#Tue Oct 21 21:40:57 CDT 2014
+#Thu Oct 23 11:22:38 CDT 2014
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.IPParameters=Channel-0\#ChannelRegularConversion,master,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
@@ -285,22 +285,22 @@ Mcu.Pin98=PE1
 Mcu.Pin99=PI4
 Mcu.PinsNb=108
 Mcu.UserName=STM32F427IGTx
-NVIC.DMA1_Stream0_IRQn=true\:1\:1
-NVIC.DMA1_Stream1_IRQn=true\:0\:2
-NVIC.DMA1_Stream3_IRQn=true\:1\:1
-NVIC.DMA1_Stream4_IRQn=true\:0\:1
-NVIC.DMA1_Stream7_IRQn=true\:1\:0
-NVIC.DMA2_Stream0_IRQn=true\:1\:5
-NVIC.DMA2_Stream1_IRQn=true\:1\:3
-NVIC.DMA2_Stream2_IRQn=true\:1\:4
-NVIC.DMA2_Stream3_IRQn=true\:1\:5
-NVIC.DMA2_Stream4_IRQn=true\:1\:3
-NVIC.DMA2_Stream5_IRQn=true\:1\:3
-NVIC.DMA2_Stream6_IRQn=true\:1\:5
-NVIC.EXTI4_IRQn=true\:0\:3
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_1
-NVIC.SPI1_IRQn=true\:0\:7
-NVIC.SPI2_IRQn=true\:0\:6
+NVIC.DMA1_Stream0_IRQn=true\:8\:0
+NVIC.DMA1_Stream1_IRQn=true\:2\:0
+NVIC.DMA1_Stream3_IRQn=true\:8\:0
+NVIC.DMA1_Stream4_IRQn=true\:2\:0
+NVIC.DMA1_Stream7_IRQn=true\:7\:0
+NVIC.DMA2_Stream0_IRQn=true\:8\:0
+NVIC.DMA2_Stream1_IRQn=true\:7\:0
+NVIC.DMA2_Stream2_IRQn=true\:8\:0
+NVIC.DMA2_Stream3_IRQn=true\:8\:0
+NVIC.DMA2_Stream4_IRQn=true\:7\:0
+NVIC.DMA2_Stream5_IRQn=true\:7\:0
+NVIC.DMA2_Stream6_IRQn=true\:8\:0
+NVIC.EXTI4_IRQn=true\:3\:0
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI1_IRQn=true\:5\:0
+NVIC.SPI2_IRQn=true\:5\:0
 NVIC.SysTick_IRQn=true\:0\:0
 PA0/WKUP.Mode=SYS-WakeUp
 PA0/WKUP.Signal=SYS_WKUP
@@ -849,7 +849,7 @@ RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.FamilyName=M
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=,FamilyName,APB2CLKDivider,LSE_VALUE,SYSCLKSource,APB1CLKDivider,VCOSAIOutputFreq_ValueR,PLLN,VcooutputI2SQ,HSE_VALUE,VCOSAIOutputFreq_ValueQ,HSI_VALUE,PLLQ,VcooutputI2S,LSI_VALUE,RCC_MCODiv1,RCC_MCO1Source
+RCC.IPParameters=,FamilyName,APB2CLKDivider,LSE_VALUE,SYSCLKSource,APB1CLKDivider,VCOSAIOutputFreq_ValueR,PLLN,VcooutputI2SQ,VCOSAIOutputFreq_ValueQ,HSE_VALUE,HSI_VALUE,PLLQ,VcooutputI2S,LSI_VALUE,RCC_MCO1Source,RCC_MCODiv1
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.PLLN=336
@@ -903,37 +903,37 @@ SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_32
 SPI1.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI1.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI1.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
-SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI2.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI2.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI2.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI2.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
-SPI2.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI2.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI2.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI3.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI3.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI3.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI3.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
-SPI3.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI3.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI3.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI4.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_32
 SPI4.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI4.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI4.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
-SPI4.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI4.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI4.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI5.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_32
 SPI5.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI5.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI5.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
-SPI5.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI5.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI5.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI6.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_32
 SPI6.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI6.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI6.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
-SPI6.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI6.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI6.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 TIM1.AutomaticOutput=TIM_AUTOMATICOUTPUT_DISABLE
 TIM1.BreakPolarity=TIM_BREAKPOLARITY_LOW
@@ -942,7 +942,7 @@ TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM1.IPParameters=Pulse-PWM Generation1 CH1,OffStateIDLEMode,OCIdleState_1-PWM Generation1 CH1,TIM_MasterSlaveMode,Period,Prescaler,OffStateRunMode,Channel-PWM Generation4 CH4,AutomaticOutput,BreakPolarity,BreakState,OCPolarity_4-PWM Generation4 CH4,TIM_MasterOutputTrigger,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation4 CH4,Pulse-PWM Generation3 CH3,ClockDivision,Channel-PWM Generation2 CH2,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,OCIdleState_4-PWM Generation4 CH4,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
+TIM1.IPParameters=Pulse-PWM Generation1 CH1,OffStateIDLEMode,OCIdleState_1-PWM Generation1 CH1,TIM_MasterSlaveMode,Period,Prescaler,OffStateRunMode,Channel-PWM Generation4 CH4,BreakPolarity,AutomaticOutput,OCPolarity_4-PWM Generation4 CH4,BreakState,TIM_MasterOutputTrigger,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation4 CH4,Pulse-PWM Generation3 CH3,ClockDivision,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,OCIdleState_4-PWM Generation4 CH4,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
 TIM1.OCIdleState_1-PWM\ Generation1\ CH1=TIM_OCIDLESTATE_SET
 TIM1.OCIdleState_2-PWM\ Generation2\ CH2=TIM_OCIDLESTATE_SET
 TIM1.OCIdleState_3-PWM\ Generation3\ CH3=TIM_OCIDLESTATE_SET
@@ -1003,7 +1003,7 @@ TIM5.Pulse-PWM\ Generation3\ CH3=500
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM8.IPParameters=Pulse-PWM Generation1 CH1,OCIdleState_1-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
+TIM8.IPParameters=Pulse-PWM Generation1 CH1,OCIdleState_1-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,Channel-PWM Generation2 CH2,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
 TIM8.OCIdleState_1-PWM\ Generation1\ CH1=TIM_OCIDLESTATE_SET
 TIM8.OCIdleState_2-PWM\ Generation2\ CH2=TIM_OCIDLESTATE_SET
 TIM8.OCIdleState_3-PWM\ Generation3\ CH3=TIM_OCIDLESTATE_SET
